쿠폰 서비스 전체 통합 테스트 해야함